\name{NEWS}
\title{spldv News}
\encoding{UTF-8}

\section{CHANGES IN VERSION 0.1.2}{
\subsection{NEW FEATURES}{
    \itemize{
      \item Improved documentation.
      \item Fixed bug with impacts.
    }
  }  
}

\section{CHANGES IN VERSION 0.1.1}{
\subsection{NEW FEATURES}{
    \itemize{
      \item Fixed bug with constrained optimization (JSS). 
      \item Fixed minor bugs with controls for maxLik.
      \item Improved documentation. 
      \item Added impacts() function for marginal effects. 
      \item Added tol.solve for solve function. 
    }
  }  
}
