@@ -1,10 +1,10 @@
 Package: spldv
 Type: Package
 Title: Spatial Models for Limited Dependent Variables
-Version: 0.1.2
-Date: 2023-9-21
+Version: 0.1.3
+Date: 2023-10-11
 Authors@R: c(person("Mauricio", "Sarrias", role = c("aut", "cre"), email = "msarrias86@gmail.com", comment = c(ORCID = "0000-0001-5932-4817")), person("Gianfranco", "Piras", role = c("aut"), email = "gpiras@mac.com", comment = c(ORCID = "0000-0003-0225-6061")), person("Daniel", "McMillen", role = "ctb"))
-Description: The current version of this package estimates spatial autoregressive models for binary dependent variables using GMM estimators. It supports one-step (Pinkse and Slade, 1998) <doi:10.1016/S0304-4076(97)00097-3> and two-step GMM estimator along with the linearized GMM estimator proposed by Klier and McMillen (2008) <doi:10.1198/073500107000000188>. It also allows for either Probit or Logit model and compute the average marginal effects. 
+Description: The current version of this package estimates spatial autoregressive models for binary dependent variables using GMM estimators <doi:10.18637/jss.v107.i08>. It supports one-step (Pinkse and Slade, 1998) <doi:10.1016/S0304-4076(97)00097-3> and two-step GMM estimator along with the linearized GMM estimator proposed by Klier and McMillen (2008) <doi:10.1198/073500107000000188>. It also allows for either Probit or Logit model and compute the average marginal effects. All these models are presented in Sarrias and Piras (2023) <doi:10.1016/j.jocm.2023.100432>. 
 Encoding: UTF-8
 RoxygenNote: 7.2.3
 Depends: R (>= 4.0)
@@ -15,10 +15,10 @@ License: GPL (>= 2)
 URL: https://github.com/gpiras/spldv
 BugReports: https://github.com/gpiras/spldv/issues
 NeedsCompilation: no
-Packaged: 2023-09-21 20:59:34 UTC; mauriciosarrias
+Packaged: 2023-10-11 12:44:07 UTC; mauriciosarrias
 Author: Mauricio Sarrias [aut, cre] (<https://orcid.org/0000-0001-5932-4817>),
   Gianfranco Piras [aut] (<https://orcid.org/0000-0003-0225-6061>),
   Daniel McMillen [ctb]
 Maintainer: Mauricio Sarrias <msarrias86@gmail.com>
 Repository: CRAN
-Date/Publication: 2023-09-22 12:00:02 UTC
+Date/Publication: 2023-10-11 13:30:02 UTC
