@@ -1,13 +1,14 @@
-72f9fe032ca789b9d5e7247259028ad3 *DESCRIPTION
+13642a5b4da524b2f7f16efa01a75084 *DESCRIPTION
 9e43820a16dfb89ee3d93149294bb943 *NAMESPACE
 f7fb18ab557d0a35d5c45937856e1728 *R/HiddenForLater.R
 86061e1313a492022bd9804b4fbc01a1 *R/marginalEffects.R
-7def133a8a82babe2fcdfd2f1ddae0bd *R/sbinaryGMM.R
-7f3205a2d9f2affff15406db5d4d59ce *R/sbinaryLGMM.R
-6a784c4f7b0e7b810f3ce76d8d7287d6 *inst/NEWS.Rd
+f2bc92a31db0a77353b3bf21f1e5d8d2 *R/sbinaryGMM.R
+3eeb115ee6739f19ed7aecb032b07950 *R/sbinaryLGMM.R
+27812e7fd160bc1010c867b1d5310bd1 *inst/CITATION
+37cc4dd7881f7ee23115c93dcf00bfae *inst/NEWS.Rd
 16438c7198a603ef13cf40163f63f97b *man/getSummary.bingmm.Rd
 eea43e3cc9b59dae177d0da390050a0a *man/getSummary.binlgmm.Rd
 e0486ee0ea40191b365324c29ceed24c *man/impacts.Rd
 01bd39cd3e04df8e74a07cca6e15fe4d *man/impacts.bingmm.Rd
-93f8858d2a3a5188719ad15bc2762992 *man/sbinaryGMM.Rd
-d563950c54803090fb8ede06bd50ab62 *man/sbinaryLGMM.Rd
+417ea93a8592350c8a5aff02e9721710 *man/sbinaryGMM.Rd
+be3e419c4d857e5ccfe93657ab5dcec9 *man/sbinaryLGMM.Rd
